--- a/src/views/cows.html
+++ b/src/views/cows.html
@@ -35,9 +35,9 @@
 
     <section class="seccion contenedor">
         <div class="container">
-            <a href="#overDiv" class="btn btn-primary">
+            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modalNewCow">
                 Agregar vaca
-            </a>
+            </button>
             <div class="table-responsive">
                 <table id="table" class="table table-striped table-hover">
                     <thead>
@@ -59,49 +59,81 @@
     </section>
 
     <section class="seccion contenedor popup">
-        <dialog class="overlay-cows" id="overDiv">
-            <div class="wrapper">
-                <h2>Registro de nueva vaca</h2>
-                <a href="#" class="close" onclick="closeForm()"><i class="fas fa-times"></i></a>
-                <div class="content">
-                    <div class="container">
+        <div class="modal fade" id="modalNewCow">
+            <div class="modal-dialog modal-dialog-centered modal-md">
+                <div class="modal-content">
+                    <div class="seccion contenedor">
                         <form>
-                            <div class="row">
-                                <div class="col">
-                                    <label for="inputRaza">Raza</label>
-                                    <input type="text" class="form-control" id="inputRaza" placeholder="Raza">
-                                </div>
-                                <div class="col">
-                                    <label for="inputSexo">Sexo</label>
-                                    <input type="text" class="form-control" id="inputSexo" placeholder="Sexo">
-                                </div>
+                            <div class="modal-header">
+                                <h4 class="modal-title">Agregar vaca</h4>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-hidden="true"></button>
                             </div>
                             <div class="row">
-                                <div class="col">
-                                    <label for="inputFechaNacimiento">Fecha de Nacimiento</label>
-                                    <input type="date" class="form-control" id="inputFechaNacimiento" placeholder="Fecha de Nacimiento">
+                                <div class="col-md-10 pb-2">
+                                    <div class="form-outline">
+                                        <label class="form-label">Raza</label>
+                                        <select class="form-select form-select-lg mb-3" aria-label=".form-select-lg race">
+                                            <option >Angus</option>
+                                            <option >Hereford</option>
+                                            <option >Nerole</option>
+                                            <option >Brahman</option>
+                                            <option >Pardo</option>
+                                            <option >Brangus</option>
+                                            <option >Cebú</option>
+                                            <option >Criolla</option>
+                                        </select>
+                                    </div>
                                 </div>
-                                <div class="col">
-                                    <label for="inputEdad">Edad</label>
-                                    <input type="text" class="form-control" id="inputEdad" placeholder="Edad">
+                                <div class="col-md-11 mb-4 pb-2">
+                                    <div class="form-outline">
+                                        <label class="form-label">Sexo</label><br>
+                                        <div class="form-check form-check-inline">
+                                            <input class="form-check-input" type="radio" name="inlineRadioOptions" id="radioMacho" value="macho">
+                                            <label class="form-check-label" for="inlineRadio1">Macho</label>
+                                        </div>
+                                        <div class="form-check form-check-inline">
+                                            <input class="form-check-input" type="radio" name="inlineRadioOptions" id="radioHembra" value="hembra">
+                                            <label class="form-check-label" for="inlineRadio2">Hembra</label>
+                                        </div>
+                                    </div>
                                 </div>
-                            </div>
-                            <div class="row">
-                                <div class="col">
-                                    <label for="inputOrigen">Origen</label>
-                                    <input type="text" class="form-control" id="inputOrigen" placeholder="Origen">
+                                <div class="col-md-11 mb-4 pb-2">
+                                    <div class="form-outline">
+                                        <label class="form-label">Fecha de Nacimiento</label>
+                                        <input type="date" id="form1" class="form-control form-control-lg" />
+                                    </div>
                                 </div>
-                            </div>
-                            <div class="row">
-                                <div class="col">
-                                    <button type="button" class="btn btn-primary" onclick="addCow()">Agregar</button>
+                                <div class="col-md-11 mb-4 pb-2">
+                                    <div class="form-outline">
+                                        <label class="form-label">Origen</label><br>
+                                        <div class="form-check form-check-inline">
+                                            <input class="form-check-input" type="radio" name="inlineRadioOptions" id="radioNatural" value="natural">
+                                            <label class="form-check-label" for="inlineRadio1">Natural</label>
+                                        </div>
+                                        <div class="form-check form-check-inline">
+                                            <input class="form-check-input" type="radio" name="inlineRadioOptions" id="radioCompra" value="compra">
+                                            <label class="form-check-label" for="inlineRadio2">Compra</label>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-md-10 pb-2" id="hidePadres">
+                                    <div class="form-outline">
+                                        <label class="form-label">Seleccione padre</label>
+                                        <select class="form-select form-select-lg mb-3" aria-label=".form-select-lg race">
+                                            <option >Angus</option>
+                                        </select><br>
+                                        <label class="form-label">Seleccione madre</label>
+                                        <select class="form-select form-select-lg mb-3" aria-label=".form-select-lg race">
+                                            <option >Angus</option>
+                                        </select>
+                                    </div>
                                 </div>
                             </div>
                         </form>
                     </div>
                 </div>
             </div>
-        </dialog>
+        </div>
     </section>
 
     <footer class="footer"> <!-- need to fix the way the footer is inside the main section -->
