--- a/src/views/cows.html
+++ b/src/views/cows.html
@@ -30,7 +30,7 @@
     </header>
 
     <main class="contenedor seccion">
-        <h1>Tabla</h1>
+        <h1>Tabla Vacas</h1>
     </main>
 
     <section class="seccion contenedor">
@@ -42,6 +42,7 @@
                 <table id="table" class="table table-striped table-hover">
                     <thead>
                         <tr>
+                            <th>#</th>
                             <th>ID</th>
                             <th>Raza</th>
                             <th>Sexo</th>
@@ -136,7 +137,7 @@
         </div>
     </section>
 
-    <footer class="footer fixed-bottom">
+    <footer class="footer">
         <div class="contenedor contenedor-footer">
             <p class="copyright">ISCow-In &copy; 2021</p>
             <div class="contenedor-contacto">
