--- a/src/views/fincas.html
+++ b/src/views/fincas.html
@@ -30,7 +30,7 @@
     </header>
 
     <main class="contenedor seccion">
-        <h1>Tabla</h1>
+        <h1>Tabla Fincas</h1>
     </main>
 
     <section class="seccion contenedor">
@@ -39,23 +39,22 @@
                         <table id="table" class="table table-striped table-hover">
                             <thead>
                                 <tr>
+                                    <th>#</th>
                                     <th>ID</th>
-                                    <th>Raza</th>
-                                    <th>Sexo</th>
-                                    <th>Fecha de Nacimiento</th>
-                                    <th>Edad</th>
-                                    <th>Origen</th>
+                                    <th>Nombre finca</th>
+                                    <th>Dirección</th>
+                                    <th>Número de lotes</th>
                                     <th>Acciones</th>
                                 </tr>
                             </thead>
-                                <tbody id="tableBody_Cows" class="table-group-divider">
+                                <tbody id="tableBody_Fincas" class="table-group-divider">
                             </tbody>
                         </table>
                     </div>
         </div>
     </section>
 
-    <footer class="footer fixed-bottom">
+    <footer class="footer">
         <div class="contenedor contenedor-footer">
             <p class="copyright">ISCow-In &copy; 2021</p>
             <div class="contenedor-contacto">
