--- a/src/views/registerUser.html
+++ b/src/views/registerUser.html
@@ -116,7 +116,7 @@
         </div>
     </section>
 
-    <footer class="footer fixed-bottom">
+    <footer class="footer">
         <div class="contenedor contenedor-footer">
             <p class="copyright">ISCow-In &copy; 2021</p>
             <div class="contenedor-contacto">
