--- a/src/views/usuarios.html
+++ b/src/views/usuarios.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>ISCow-In</title>
+    <title>ISCow-In - Usuarios</title>
     <!-- Bootstrap core CSS -->  
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -30,7 +30,7 @@
     </header>
 
     <main class="contenedor seccion">
-        <h1>Tabla</h1>
+        <h1>Tabla Usuarios</h1>
     </main>
 
     <section class="seccion contenedor">
@@ -39,23 +39,24 @@
                         <table id="table" class="table table-striped table-hover">
                             <thead>
                                 <tr>
+                                    <th>#</th>
                                     <th>ID</th>
-                                    <th>Raza</th>
-                                    <th>Sexo</th>
-                                    <th>Fecha de Nacimiento</th>
-                                    <th>Edad</th>
-                                    <th>Origen</th>
+                                    <th>Nombre de usuario</th>
+                                    <th>Nombre</th>
+                                    <th>Apellido</th>
+                                    <th>Correo electrónico</th>
+                                    <th>Es administrador</th>
                                     <th>Acciones</th>
                                 </tr>
                             </thead>
-                                <tbody id="tableBody_Cows" class="table-group-divider">
+                                <tbody id="tableBody_Users" class="table-group-divider">
                             </tbody>
                         </table>
                     </div>
         </div>
     </section>
 
-    <footer class="footer"> <!-- need to fix the way the footer is inside the main section -->
+    <footer class="footer ">
         <div class="contenedor contenedor-footer">
             <p class="copyright">ISCow-In &copy; 2021</p>
             <div class="contenedor-contacto">
