--- a/src/views/lotes.html
+++ b/src/views/lotes.html
@@ -50,8 +50,11 @@
 
     <section class="seccion contenedor">
         <div class="container">
-            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modalNewLotes">
+            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modalNewLote">
                 Agregar Lote
+            </button>
+            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modalNewCow">
+                Agregar vaca
             </button>
             <div class="table-responsive">
                 <table id="table" class="table table-striped table-hover">
@@ -72,13 +75,49 @@
     </section>
 
     <section class="seccion contenedor popup">
-        <div class="modal fade" id="modalNewCow">
+        <div class="modal fade" id="modalNewLote">
             <div class="modal-dialog modal-dialog-centered modal-md">
                 <div class="modal-content">
                     <div class="seccion contenedor">
                         <form>
                             <div class="modal-header">
                                 <h4 class="modal-title">Agregar Lote</h4>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-hidden="true"></button>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-10 pb-2">
+                                    <div class="form-outline">
+                                        <label class="form-label">Número de lote</label>
+                                        <input type="text" id="lotenumber" class="form-control form-control-lg" />
+                                    </div>
+                                </div>
+                                <div class="col-md-10 pb-2">
+                                    <div class="form-outline">
+                                        <label class="form-label">Área</label>
+                                        <input type="text" id="lotearea" class="form-control form-control-lg" />
+                                    </div>
+                                </div>
+                                <div class="col-md-10 pb-2" id="buttonAddFinca">
+                                    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modalNewCow">
+                                        Agregar
+                                    </button>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="seccion contenedor popup">
+        <div class="modal fade" id="modalNewCow">
+            <div class="modal-dialog modal-dialog-centered modal-md">
+                <div class="modal-content">
+                    <div class="seccion contenedor">
+                        <form>
+                            <div class="modal-header">
+                                <h4 class="modal-title">Agregar vaca</h4>
                                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-hidden="true"></button>
                             </div>
                             <div class="row">
