--- a/src/views/cows.html
+++ b/src/views/cows.html
@@ -16,18 +16,12 @@
     <header class="header">
         <div class="contenedor contenido-header">
             <div class="barra">
-<<<<<<< HEAD
-                <nav class="navegacion navbar navbar-expand-lg">
-                    <div class="container-fluid">
-                        <a href="index.html"><img src="assets/LogoNegro (1).png" alt="logo"></a>
-=======
                 <a href="index.html">
                     <img src="" alt="Logotipo de ISCow-In">ISCow-In
                 </a>
                 <nav class="navegacion navbar navbar-expand-lg">
                     <div class="container-fluid">
                         <a class="navbar-brand navMain" href="#">Inicio</a>
->>>>>>> develop
                         <a class="navbar-brand navMain" href="#">Reportes</a>
                         <a class="navbar-brand navMain" href="#">Cuenta</a>
                         <a class="navbar-brand navMain" href="#">Salir</a>
@@ -42,11 +36,7 @@
                                 </a>
                                 <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                                     <li><a class="dropdown-item" href="fincas.html">Tabla Fincas</a></li>
-<<<<<<< HEAD
-                                    <li><a class="dropdown-item" href="lotes.html">Tabla Lotes</a></li>
-=======
                                     <li><a class="dropdown-item" href="#">Tabla Lotes</a></li>
->>>>>>> develop
                                 </ul>
                                 </li>
                             </ul>
@@ -63,6 +53,9 @@
 
     <section class="seccion contenedor">
         <div class="container">
+            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modalNewCow">
+                Agregar vaca
+            </button>
             <div class="table-responsive">
                 <table id="table" class="table table-striped table-hover">
                     <thead>
@@ -84,9 +77,6 @@
         </div>
     </section>
 
-<<<<<<< HEAD
-    
-=======
     <section class="seccion contenedor popup">
         <div class="modal fade" id="modalNewCow">
             <div class="modal-dialog modal-dialog-centered modal-md">
@@ -169,7 +159,6 @@
             </div>
         </div>
     </section>
->>>>>>> develop
 
     <footer class="footer">
         <div class="contenedor contenedor-footer">
