--- a/src/views/usuarios.html
+++ b/src/views/usuarios.html
@@ -57,9 +57,7 @@
                 <table id="table" class="table table-striped table-hover">
                     <thead>
                         <tr>
-                            <th>#</th>
                             <th>ID</th>
-                            <th>Nombre de usuario</th>
                             <th>Nombre</th>
                             <th>Apellido</th>
                             <th>Correo electrónico</th>
@@ -67,8 +65,7 @@
                             <th>Acciones</th>
                         </tr>
                     </thead>
-                        <tbody id="tableBody_Users" class="table-group-divider">
-                    </tbody>
+                        <tbody id="tableBody_Users" class="table-group-divider"></tbody>
                 </table>
             </div>
         </div>
