--- a/src/views/usuarios.html
+++ b/src/views/usuarios.html
@@ -52,7 +52,9 @@
 
     <section class="seccion contenedor">
         <div class="container ">
-            <input type="button" class="btn btn-primary" value="Agregar Usuario" onclick="location.href='registerUser.html'">
+            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modalNewUser">
+                Agregar Usuario
+            </button>
             <div class="table-responsive">
                 <table id="table" class="table table-striped table-hover">
                     <thead>
@@ -67,6 +69,89 @@
                     </thead>
                         <tbody id="tableBody_Users" class="table-group-divider"></tbody>
                 </table>
+            </div>
+        </div>
+    </section>
+
+    <section class="seccion contenedor popup">
+        <div class="modal fade" id="modalNewUser">
+            <div class="modal-dialog modal-dialog-centered modal-md">
+                <div class="modal-content">
+                    <div class="seccion contenedor">
+                        <form>
+                            <div class="modal-header">
+                                <h4 class="modal-title">Agregar Usuario</h4>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-hidden="true"></button>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-10 pb-2">
+                                    <div class="form-outline">
+                                        <label class="form-label">Raza</label>
+                                        <select class="form-select form-select-lg mb-3" aria-label=".form-select-lg race">
+                                            <option >Angus</option>
+                                            <option >Hereford</option>
+                                            <option >Nerole</option>
+                                            <option >Brahman</option>
+                                            <option >Pardo</option>
+                                            <option >Brangus</option>
+                                            <option >Cebú</option>
+                                            <option >Criolla</option>
+                                        </select>
+                                    </div>
+                                </div>
+                                <div class="col-md-11 mb-4 pb-2">
+                                    <div class="form-outline">
+                                        <label class="form-label">Sexo</label><br>
+                                        <div class="form-check form-check-inline">
+                                            <input class="form-check-input" type="radio" name="inlineRadioOptions" id="radioMacho" value="macho">
+                                            <label class="form-check-label" for="inlineRadio1">Macho</label>
+                                        </div>
+                                        <div class="form-check form-check-inline">
+                                            <input class="form-check-input" type="radio" name="inlineRadioOptions" id="radioHembra" value="hembra">
+                                            <label class="form-check-label" for="inlineRadio2">Hembra</label>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-md-11 mb-4 pb-2">
+                                    <div class="form-outline">
+                                        <label class="form-label">Fecha de Nacimiento</label>
+                                        <input type="date" id="form1" class="form-control form-control-lg" />
+                                    </div>
+                                </div>
+                                <div class="col-md-11 mb-4 pb-2">
+                                    <div class="form-outline">
+                                        <label class="form-label">Origen</label><br>
+                                        <div class="form-check form-check-inline">
+                                            <input class="form-check-input" type="radio" name="radioorigen" id="radioNatural" value="natural">
+                                            <label class="form-check-label" for="inlineRadio1">Natural</label>
+                                        </div>
+                                        <div class="form-check form-check-inline">
+                                            <input class="form-check-input" type="radio" name="radioorigen" id="radioCompra" value="compra">
+                                            <label class="form-check-label" for="inlineRadio2">Compra</label>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-md-10 pb-2" id="hidePadres">
+                                    <div class="form-outline">
+                                        <label class="form-label">Seleccione padre</label>
+                                        <select class="form-select form-select-lg mb-3" aria-label=".form-select-lg race">
+                                            <option >Angus</option>
+                                        </select><br>
+                                        <label class="form-label">Seleccione madre</label>
+                                        <select class="form-select form-select-lg mb-3" aria-label=".form-select-lg race">
+                                            <option >Angus</option>
+                                        </select>
+                                    </div>
+                                </div>
+                                <div class="col-md-10 pb-2" id="buttonAddCow">
+                                    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modalNewCow">
+                                        Agregar
+                                    </button>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
